<resources>
    <string name="app_name" translatable="false">PhotosApp</string>
    <string name="please_enter_a_new_album_name" translatable="false">Please enter a new album name</string>
    <string name="open_album" translatable="false">Open</string>
    <string name="create_album" translatable="false">New Album</string>
    <string name="delete_album" translatable="false">Delete</string>
    <string name="rename_album" translatable="false">Rename</string>
    <string name="albumview_title" translatable="false">User\'s albums</string>
    <string name="search" translatable="false">Search Photos</string>
    <string name="rename_instructions" translatable="false">Please enter the new name for the album</string>
    <string name="add" translatable="false">Add</string>
    <string name="tag" translatable="false">Tags</string>
    <string name="remove" translatable="false">Remove</string>
    <string name="display" translatable="false">Display</string>
    <string name="photos_title" translatable="false">Photos in this album + commands</string>
    <string name="move">Move/Copy</string>
    <string name="exit_slideshow" translatable="false">Exit Slideshow</string>
    <string name="tag_hint">New Tag Value</string>
    <string name="remove_tag">Remove selected tag</string>
    <string name="back">Back</string>
    <string name="remove_album_warning">Are you sure you wish to remove this album?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="new_album_hint" >New Album Name</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="photo_display_tile">Photo name</string>
    <string name="create">Create</string>
    <string name="create_album_hint">Album Name</string>
    <string name="slideshow">Slideshow Mode</string>
    <string-array name="tag_types">
        <item>Select a tag type...</item>
        <item>Location</item>
        <item>Person</item>
    </string-array>
</resources>
