<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="Add"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintEnd_toStartOf="@+id/slideshow"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/remove"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="Remove"
        android:text="@string/remove"
        app:layout_constraintBaseline_toBaselineOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/display" />

    <Button
        android:id="@+id/move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Move"
        android:text="@string/move"
        app:layout_constraintBaseline_toBaselineOf="@+id/slideshow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/slideshow" />

    <Button
        android:id="@+id/display"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="Display"
        android:text="@string/display"
        app:layout_constraintEnd_toStartOf="@+id/remove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="440dp" />

    <ListView
        android:id="@+id/photoList"
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/photos_title"
        android:textAlignment="center"
        android:textSize="@dimen/titleSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/slideshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SlideShow"
        android:text="Slideshow Mode"
        app:layout_constraintBaseline_toBaselineOf="@+id/add"
        tools:layout_editor_absoluteX="121dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Back"
        android:text="Back"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="312dp" />
</android.support.constraint.ConstraintLayout>